kubernetes/manifests/system/argocd/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-httproute
spec:
  hostnames:
    - argocd.k8s.weinbender.io
  parentRefs:
    - name: cluster-gateway
      namespace: cluster-gateway
      kind: Gateway
      group: gateway.networking.k8s.io
  rules:
    - backendRefs:
        - kind: Service
          name: argocd-server
          namespace: argocd
          port: 80
          group: ""
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
